# jhcunn

./: CMakeLists.txt  JHCUNN.lua  init.lua  jhcunn-scm-1.rockspec  run_all_tests.sh
lib/: CMakeLists.txt
lib/JHCUNN/: CMakeLists.txt  JHCUNN.h  LookupTable.cu  common.h
src/: Encode.cu  EqualSet.cu  LogSample.cu  LogScale.cu  LogSum1d.cu  init.cu
test/: Linear.lua  LookupTable.lua  libcujhu.lua
