CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(CUDA 6.5 REQUIRED)

# Detect CUDA architecture and get best NVCC flags
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/cmake/FindCudaArch.cmake)
SELECT_NVCC_ARCH_FLAGS(NVCC_FLAGS_EXTRA)
LIST(APPEND CUDA_NVCC_FLAGS ${NVCC_FLAGS_EXTRA})

MESSAGE("Include directory: ${Torch_INSTALL_INCLUDE}/THC")

INCLUDE_DIRECTORIES("${Torch_INSTALL_INCLUDE}/THC")
LINK_DIRECTORIES("${Torch_INSTALL_LIB}")

FILE(STRINGS lib/JHCUNN/JHCUNN.h JHCUNN_headers NEWLINE_CONSUME)
FILE(WRITE JHCUNN_h.lua "return [[")
FILE(APPEND JHCUNN_h.lua ${JHCUNN_headers})
FILE(APPEND JHCUNN_h.lua "]]")

FILE(GLOB luasrc *.lua)

ADD_SUBDIRECTORY(lib)

MESSAGE("Install destination: ${Torch_INSTALL_LUA_PATH_SUBDIR}/jhcunn")
MESSAGE("LUASRC = ${luasrc}")

INSTALL(
  FILES
  ${luasrc}
  DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/jhcunn")

# LIBCUJHU
MESSAGE("CUDA_TOOLKIT_ROOT_DIR: ${CUDA_TOOLKIT_ROOT_DIR}")
MESSAGE("Building CUDA library (cujhu)")
SET(cudasrc src/init.cu) # source
CUDA_ADD_LIBRARY(cujhu MODULE ${cudasrc})
TARGET_LINK_LIBRARIES(cujhu luaT THC TH ${CUDA_cusparse_LIBRARY})
INSTALL(TARGETS cujhu LIBRARY DESTINATION ${Torch_INSTALL_LUA_CPATH_SUBDIR})
