CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

IF(NOT Torch_FOUND)
  FIND_PACKAGE(Torch REQUIRED)
ENDIF()

IF(NOT CUDA_FOUND)
  FIND_PACKAGE(CUDA 4.0 REQUIRED)
ENDIF()

IF(NOT JHCUNN_INSTALL_LIB_SUBDIR)
  SET(JHCUNN_INSTALL_LIB_SUBDIR "lib" CACHE PATH "JHCUNN install library directory")
ENDIF()

FILE(GLOB src-cuda *.cu)

CUDA_ADD_LIBRARY(JHCUNN MODULE ${src-cuda})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(JHCUNN THC TH ${CUDA_cusparse_LIBRARY})

INSTALL(TARGETS JHCUNN LIBRARY DESTINATION ${JHCUNN_INSTALL_LIB_SUBDIR})
